# wezterm

./: Cargo.toml
wezterm/: Cargo.toml
wezterm-client/src/: client.rs
wezterm-test/: Cargo.toml
wezterm-test/src/: app.rs  main.rs
wezterm/src/: main.rs
